--- a/src/OzonEdu.MerchandiseService/Dockerfile
+++ b/src/OzonEdu.MerchandiseService/Dockerfile
@@ -5,10 +5,17 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["src/OzonEdu.MerchandiseService/OzonEdu.MerchandiseService.csproj", "src/OzonEdu.MerchandiseService/"]
-RUN dotnet restore "src/OzonEdu.MerchandiseService/OzonEdu.MerchandiseService.csproj"
-COPY . .
-WORKDIR "/src/src/OzonEdu.MerchandiseService"
+
+COPY ["src/OzonEdu.MerchandiseService.Grpc/OzonEdu.MerchandiseService.Grpc.csproj", "OzonEdu.MerchandiseService.Grpc/"]
+COPY ["src/OzonEdu.MerchandiseService.HttpModels/OzonEdu.MerchandiseService.HttpModels.csproj", "OzonEdu.MerchandiseService.HttpModels/"]
+COPY ["src/OzonEdu.MerchandiseService.Infrastructure/OzonEdu.MerchandiseService.Infrastructure.csproj", "OzonEdu.MerchandiseService.Infrastructure/"]
+COPY ["src/OzonEdu.MerchandiseService/OzonEdu.MerchandiseService.csproj", "OzonEdu.MerchandiseService/"]
+RUN dotnet restore "OzonEdu.MerchandiseService/OzonEdu.MerchandiseService.csproj"
+COPY "src/OzonEdu.MerchandiseService.Grpc/." "OzonEdu.MerchandiseService.Grpc/"
+COPY "src/OzonEdu.MerchandiseService.HttpModels/." "OzonEdu.MerchandiseService.HttpModels/"
+COPY "src/OzonEdu.MerchandiseService.Infrastructure/." "OzonEdu.MerchandiseService.Infrastructure/"
+COPY "src/OzonEdu.MerchandiseService/." "OzonEdu.MerchandiseService/"
+WORKDIR "/src/OzonEdu.MerchandiseService"
 RUN dotnet build "OzonEdu.MerchandiseService.csproj" -c Release -o /app/build
 
 FROM build AS publish
