[TASK02-REVIEW02] Moves IMerchandiseService to separate file Adds ExceptionInterceptor for Grpc Adds exception handling in LoggingInterceptor Removes unused usings Disables warning 1591 - Missing XML comment for publicly visible type or member

--- a/src/OzonEdu.MerchandiseService/OzonEdu.MerchandiseService.csproj
+++ b/src/OzonEdu.MerchandiseService/OzonEdu.MerchandiseService.csproj
@@ -6,6 +6,14 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <NoWarn>1701;1702;1591</NoWarn>
+    </PropertyGroup>
+
     <ItemGroup>
       <ProjectReference Include="..\OzonEdu.MerchandiseService.Grpc\OzonEdu.MerchandiseService.Grpc.csproj" />
       <ProjectReference Include="..\OzonEdu.MerchandiseService.HttpModels\OzonEdu.MerchandiseService.HttpModels.csproj" />
