--- a/src/OzonEdu.MerchandiseService.Infrastructure/OzonEdu.MerchandiseService.Infrastructure.csproj
+++ b/src/OzonEdu.MerchandiseService.Infrastructure/OzonEdu.MerchandiseService.Infrastructure.csproj
@@ -10,8 +10,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Npgsql" Version="6.0.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
@@ -21,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Repositories" />
+      <Folder Include="Repositories\Infrastructure" />
     </ItemGroup>
     
 </Project>
