--- a/src/OzonEdu.MerchandiseService.Infrastructure/OzonEdu.MerchandiseService.Infrastructure.csproj
+++ b/src/OzonEdu.MerchandiseService.Infrastructure/OzonEdu.MerchandiseService.Infrastructure.csproj
@@ -10,10 +10,14 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="1.8.2" />
       <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
+      <PackageReference Include="Jaeger" Version="1.0.3" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
       <PackageReference Include="Npgsql" Version="6.0.0" />
+      <PackageReference Include="OpenTracing.Contrib.NetCore" Version="0.8.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
@@ -23,7 +27,14 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="ExternalServices\StockApi" />
       <Folder Include="Repositories\Infrastructure" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Protobuf Include="ExternalServices\StockApi\stock-api.proto" GrpcServices="Client">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Protobuf>
     </ItemGroup>
     
 </Project>
